--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -18,6 +18,6 @@
                  
         </div>
         <script src="C:\Users\gopala.a\Desktop\Projects\Calculator/binaryCalculator.js" type="text/javascript"></script>
-                <link rel='stylesheet' href='C:\Users\gopala.a\Desktop\Projects\Calculator/binaryCalculator.css' type='text/css'>
+                <link rel='stylesheet' href='https://github.com/gops12345/codes/blob/master/Calculator/binaryCalculator.css' type='text/css'>
     </body>
 </html>
