--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -17,7 +17,7 @@
             <button id='btnDiv' class= 'buttonClass3' onclick = "dis('/')">/</button>
                  
         </div>
-        <script src="C:\Users\gopala.a\Desktop\Projects\Calculator/binaryCalculator.js" type="text/javascript"></script>
+        <script src="https://github.com/gops12345/codes/blob/master/Calculator/binaryCalculator.js" type="text/javascript"></script>
                 <link rel='stylesheet' href='https://github.com/gops12345/codes/blob/master/Calculator/binaryCalculator.css' type='text/css'>
     </body>
 </html>
